--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href = "#Newsletter">Newsletter</a>
                 </li>
                 <li class = "menu-item">
-                    <a  href = "#Aspirants">Aspirants Network</a>
+                    <a  href = "">Aspirants Network</a>
                 </li>
                 <li class = "menu-item">
                     <a href = "#Partners">Our Partners</a>
@@ -36,11 +36,11 @@
     </div>
     <div id = "About">
         <div class = "">
-
+            dfjhfsjgj
         </div>
     </div>
     <div id = "Blog">
-
+        <div></div>
     </div>
     <div id = "Newsletter">
 
