--- a/index.html
+++ b/index.html
@@ -34,25 +34,27 @@
             </ul>
         </div>
     </div>
-    <div id = "About">
-        <div class = "">
-            dfjhfsjgj
+    <div id = "Content">
+        <div id = "About">
+            <div class = "">
+                dfjhfsjgj
+            </div>
         </div>
-    </div>
-    <div id = "Blog">
-        <div></div>
-    </div>
-    <div id = "Newsletter">
+        <div id = "Blog">
+            <div></div>
+        </div>
+        <div id = "Newsletter">
 
-    </div>
-    <div id = "Aspirants">
+        </div>
+        <div id = "Aspirants">
 
-    </div>
-    <div id = "Partners">
+        </div>
+        <div id = "Partners">
 
-    </div>
-    <div id = "Contact">
+        </div>
+        <div id = "Contact">
 
+        </div>
     </div>
 </body>
 </html>
