main cry kar jaunga

--- a/index.html
+++ b/index.html
@@ -39,32 +39,11 @@
     <div id = "Content">
         <div id = "About">
             <div id = "About-bg">
-                <div class = "slideshow">
-                    <div class = "slide fade slide1">
-                        <div class = "slide-image">
-                            <img src = "image/slide1.jpg" alt = "">
-                        </div>
-                        <div class = "slide-text">
-                            This is Photo 1 
-                        </div>  
-                    </div>
-                    <div class = "slide fade">
-                        <div class = "slide-image">
-                            <img src = "image/slide2.jpg" alt = "">
-                        </div>
-                        <div class = "slide-text">
-                            This is Photo 2
-                        </div>  
-                    </div>
-                    <div class = "slide fade">
-                        <div class = "slide-image">
-                            <img src = "image/slide3.jpg" alt = "">
-                        </div>
-                        <div class = "slide-text">
-                            This is Photo 3
-                        </div>  
-                    </div>
-                </div>
+                <div id = "About-bg-video">
+                    <video autoplay muted loop id="myVideo">
+                        <source src="video/bg_vid.mp4" type="video/mp4">
+                    </video>
+                </div> 
                 <div id = "About-content">
                     <div id = "About-left">
                         <div class = "titles">
