added newsletter portion

--- a/index.html
+++ b/index.html
@@ -70,10 +70,74 @@
             </div>
         </div>
         <div id = "Blog">
-            <div></div>
+            <div>
+            </div>
         </div>
         <div id = "Newsletter">
-
+            <div id = "Newsletter-content">
+                <div class = "titles">
+                    Our Newsletter
+                </div>
+                <div class = "subtitles">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Sed ultrices felis nisi, et lacinia lorem pharetra fringilla. 
+            </div>
+            <div id = "Newsletter-buttons">
+                <div id = "Newsletter-left">
+                    <table>
+                        <tr> 
+                            <td class = "card">
+                                <div class="flip-card">
+                                    <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <img src="image/newsletter1.jpeg" alt="June 2023" style="width:16.875vh;height:30vh;">
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <h1>May 2023</h1>
+                                        <p style="font-size: small; font-weight: 300;">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                        </p>
+                                    </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class = "card">
+                                <div class="flip-card">
+                                    <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <img src="image/newsletter1.jpeg" alt="June 2023" style="width:16.875vh;height:30vh;">
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <h1>June 2023</h1>
+                                        <p style="font-size: small; font-weight: 300;">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                        </p>
+                                    </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class = "card">
+                                <div class="flip-card">
+                                    <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <img src="image/newsletter1.jpeg" alt="June 2023" style="width:16.875vh;height:30vh;">
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <h1>July 2023</h1>
+                                        <p style="font-size: small; font-weight: 300;">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                        </p>
+                                    </div>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div id = "Newsletter-right">
+                    
+                </div>
+            </div>
         </div>
         <div id = "Aspirants">
 
