added functionality to newsletter portion

--- a/index.html
+++ b/index.html
@@ -87,55 +87,61 @@
                     <table>
                         <tr> 
                             <td class = "card">
-                                <div class="flip-card">
-                                    <div class="flip-card-inner">
-                                    <div class="flip-card-front">
-                                        <img src="image/newsletter1.jpeg" alt="June 2023" style="width:16.875vh;height:30vh;">
+                                <a href = "https://www.google.com">
+                                    <div class="flip-card">
+                                        <div class="flip-card-inner">
+                                            <div class="flip-card-front">
+                                                <img src="image/newsletter1.jpeg" alt="May 2023" style="width:16.875vh;height:30vh;">
+                                            </div>
+                                        <div class="flip-card-back">
+                                            <h1>May 2023</h1>
+                                            <p style="font-size: small; font-weight: 300;">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                            </p>
+                                        </div>
                                     </div>
-                                    <div class="flip-card-back">
-                                        <h1>May 2023</h1>
-                                        <p style="font-size: small; font-weight: 300;">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                        </p>
-                                    </div>
-                                    </div>
-                                </div>
+                                </a>
                             </td>
                             <td class = "card">
-                                <div class="flip-card">
-                                    <div class="flip-card-inner">
-                                    <div class="flip-card-front">
-                                        <img src="image/newsletter1.jpeg" alt="June 2023" style="width:16.875vh;height:30vh;">
+                                <a href = "https://www.google.com">
+                                    <div class="flip-card">
+                                        <div class="flip-card-inner">
+                                            <div class="flip-card-front">
+                                                <img src="image/newsletter1.jpeg" alt="June 2023" style="width:16.875vh;height:30vh;">
+                                            </div>
+                                        <div class="flip-card-back">
+                                            <h1>June 2023</h1>
+                                            <p style="font-size: small; font-weight: 300;">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                            </p>
+                                        </div>
                                     </div>
-                                    <div class="flip-card-back">
-                                        <h1>June 2023</h1>
-                                        <p style="font-size: small; font-weight: 300;">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                        </p>
-                                    </div>
-                                    </div>
-                                </div>
+                                </a>
                             </td>
                             <td class = "card">
-                                <div class="flip-card">
-                                    <div class="flip-card-inner">
-                                    <div class="flip-card-front">
-                                        <img src="image/newsletter1.jpeg" alt="June 2023" style="width:16.875vh;height:30vh;">
+                                <a href = "https://www.google.com">
+                                    <div class="flip-card">
+                                        <div class="flip-card-inner">
+                                            <div class="flip-card-front">
+                                                <img src="image/newsletter1.jpeg" alt="July 2023" style="width:16.875vh;height:30vh;">
+                                            </div>
+                                        <div class="flip-card-back">
+                                            <h1>July 2023</h1>
+                                            <p style="font-size: small; font-weight: 300;">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                            </p>
+                                        </div>
                                     </div>
-                                    <div class="flip-card-back">
-                                        <h1>July 2023</h1>
-                                        <p style="font-size: small; font-weight: 300;">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                        </p>
-                                    </div>
-                                    </div>
+                                </a>
                                 </div>
                             </td>
                         </tr>
                     </table>
                 </div>
                 <div id = "Newsletter-right">
-                    
+                    <a href = "https://www.google.com">
+                        <button class="c-btn" >Read More</button>
+                    </a>
                 </div>
             </div>
         </div>
