added parts of the blog section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/homeelements.css">
+    <link rel="stylesheet" href="css/blog.css">
     <script src="js/index.js"></script>
 </head>
 <body>
@@ -70,7 +71,51 @@
             </div>
         </div>
         <div id = "Blog">
-            <div>
+            <div id = "Blog-content">
+                <div class = "titles">
+                    Our Blog
+                </div>
+                <div class = "subtitles">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Sed ultrices felis nisi, et lacinia lorem pharetra fringilla.
+                </div>
+                <div id = "Blog-content1">
+                    <div id = "Blog-content-left">
+                        <div id = "Blog-display">
+                            <div id = "Blog-display-title">
+                                Blog 1 Title
+                            </div>
+                            <div id = "Blog-display-content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Sed ultrices felis nisi, et lacinia lorem pharetra fringilla.
+                                Aenean imperdiet consectetur nunc, sed ornare orci aliquet id.
+                                Curabitur eget cursus diam. Vestibulum posuere libero sapien, ac sagittis mi tempus quis.
+                                Nunc ullamcorper eleifend justo ultricies iaculis.
+                                <a href = "https://www.google.com">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div id = "Blog-content-right">
+                        <div id = "Blog list">
+                            <table>
+                                <tr>
+                                    <td>
+                                        <div id = "Blog-display-title">
+                                            Blog 2 Title
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div id = "Blog-display-title">
+                                            Blog 3 Title
+                                        </div>
+                                </tr>
+                            </table>
+                        </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div id = "Newsletter">
@@ -144,9 +189,6 @@
                     </a>
                 </div>
             </div>
-        </div>
-        <div id = "Aspirants">
-
         </div>
         <div id = "Partners">
 
