--- a/index.html
+++ b/index.html
@@ -51,17 +51,13 @@
                             The Indian Vidyarthi
                         </div>
                         <div class = "subtitles">
-                            A platform for students to share their experiences and knowledge.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Sed ultrices felis nisi, et lacinia lorem pharetra fringilla. 
-                            Aenean imperdiet consectetur nunc, sed ornare orci aliquet id. 
-                            Curabitur eget cursus diam. Vestibulum posuere libero sapien, ac sagittis mi tempus quis. 
-                            Nunc ullamcorper eleifend justo ultricies iaculis. 
-                            Nulla vitae nunc vel ligula varius sagittis eget et velit. 
-                            Ut nec augue commodo est laoreet sollicitudin. 
-                            Nulla volutpat dolor ac sollicitudin dignissim. 
-                            Vestibulum tempus, purus sit amet tempus porttitor, 
-                            augue neque maximus mauris, ut dapibus quam dui at mi.
+                            We aim to foster the needs of all the talented Indian Vidyarthis 
+                            and we believe that potential and creative individuals can be 
+                            found everywhere. And dont’t you worry if you are a ‘confused’ 
+                            and ‘still figuring out’ person, we are even a better place for 
+                            you as you can explore our dynamic fields of opportunities and 
+                            venture into different dimensions which catch your keen eyes 
+                            with interest.
                         </div>
                     </div>
                     <div id = "About-right">
@@ -76,8 +72,11 @@
                     Our Blog
                 </div>
                 <div class = "subtitles">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Sed ultrices felis nisi, et lacinia lorem pharetra fringilla.
+                    Aren’t you curious to know what your peers think? 
+                    Well our blogs and articles are a culmination of vibrant 
+                    perspectives of budding writers. 
+                    We like to showcase the imagination of the people and their 
+                    outlook of an eventful world out there. 
                 </div>
                 <div id = "Blog-content1">
                     <div id = "Blog-content-left">
@@ -184,7 +183,7 @@
                     </table>
                 </div>
                 <div id = "Newsletter-right">
-                    <a href = "https://www.google.com">
+                    <a href = "newsletter.html">
                         <button class="c-btn" >Read More</button>
                     </a>
                 </div>
