Update newsletter.html to add cards

--- a/newsletter.html
+++ b/newsletter.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/homeelements.css">
     <link rel="stylesheet" href="css/blog.css">
+    <link rel="icon" type="image/x-icon" href="https://media.licdn.com/dms/image/C4D0BAQEmRfOpHlHwrw/company-logo_200_200/0/1678087546979?e=1697673600&v=beta&t=Zpwfs6JAhD5JCfAFa81oSQnejXWoWbjW-LtCKQcIeBI">
+    <link rel="stylesheet" href="css/cardstyles.css">
     <script src="js/index.js"></script>
 </head>
 <body>
@@ -22,8 +24,57 @@
             </ul>
         </div>
     </div>
-    <div id = "Content">
-
-    </div>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <div class="content">
+            <!-- card -->
+            <a href="https://www.youtube.com/watch?v=ImhfIv5NSqY&list=PLoGAOsRY6CXPP8OWXGqgQ2N6btgTo-L8A&index=21&t=22s" target="blank_" style="text-decoration: none">
+            <div class="card">
+                    <div class="icon"><i class="material-icons md-36">looks_one</i></div>
+                    <p class="title">Numero Uno</p>
+                    <p class="text">Bitches?</p>
+            </div></a>
+            <!-- end card -->     
+            <!-- card -->
+            <a href="https://www.youtube.com/watch?v=ImhfIv5NSqY&list=PLoGAOsRY6CXPP8OWXGqgQ2N6btgTo-L8A&index=21&t=22s" target="blank_" style="text-decoration: none">
+            <div class="card">
+                    <div class="icon"><i class="material-icons md-36">looks_two</i></div>
+                    <p class="title">Numero Dos</p>
+                    <p class="text">No Bitches?</p>
+            </div></a>
+            <!-- end card -->     
+            <!-- card -->
+            <a href="https://www.youtube.com/watch?v=ImhfIv5NSqY&list=PLoGAOsRY6CXPP8OWXGqgQ2N6btgTo-L8A&index=21&t=22s" target="blank_" style="text-decoration: none">
+            <div class="card">
+                    <div class="icon"><i class="material-icons md-36">looks_3</i></div>
+                    <p class="title">Numero Tres</p>
+                    <p class="text">Still no Bitches?</p>
+            </div></a>
+            <!-- end card -->     
+            <!-- card -->
+            <a href="https://www.youtube.com/watch?v=ImhfIv5NSqY&list=PLoGAOsRY6CXPP8OWXGqgQ2N6btgTo-L8A&index=21&t=22s" target="blank_" style="text-decoration: none">
+            <div class="card">
+                    <div class="icon"><i class="material-icons md-36">looks_4</i></div>
+                    <p class="title">Numero For</p>
+                    <p class="text">Damn Bitches.</p>
+            </div></a>
+            <!-- end card -->     
+            <!-- card -->
+            <a href="https://www.youtube.com/watch?v=ImhfIv5NSqY&list=PLoGAOsRY6CXPP8OWXGqgQ2N6btgTo-L8A&index=21&t=22s" target="blank_" style="text-decoration: none">
+            <div class="card">
+                    <div class="icon"><i class="material-icons md-36">looks_5</i></div>
+                    <p class="title">Numero fiv</p>
+                    <p class="text">Fuck Bitches.</p>
+            </div></a>
+            <!-- end card -->     
+            <!-- card -->
+            <a href="https://www.youtube.com/watch?v=ImhfIv5NSqY&list=PLoGAOsRY6CXPP8OWXGqgQ2N6btgTo-L8A&index=21&t=22s" target="blank_" style="text-decoration: none">
+            <div class="card">
+                    <div class="icon"><i class="material-icons md-36">looks_6</i></div>
+                    <p class="title">Numero sex</p>
+                    <p class="text">but no Bitches:(</p>
+            </div></a>
+            <!-- end card -->     
+        </div>
+        </div>
 </body>
 </html>
