home page blog styled

--- a/index.html
+++ b/index.html
@@ -90,29 +90,13 @@
                                 Aenean imperdiet consectetur nunc, sed ornare orci aliquet id.
                                 Curabitur eget cursus diam. Vestibulum posuere libero sapien, ac sagittis mi tempus quis.
                                 Nunc ullamcorper eleifend justo ultricies iaculis.
-                                <a href = "https://www.google.com">Read More</a>
                             </div>
                         </div>
                     </div>
                     <div id = "Blog-content-right">
-                        <div id = "Blog list">
-                            <table>
-                                <tr>
-                                    <td>
-                                        <div id = "Blog-display-title">
-                                            Blog 2 Title
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div id = "Blog-display-title">
-                                            Blog 3 Title
-                                        </div>
-                                </tr>
-                            </table>
-                        </div>
-                        </div>
+                        <a href = "blogs.html">
+                            <button class="c-btn" >Read More</button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -125,63 +109,63 @@
                 <div class = "subtitles">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     Sed ultrices felis nisi, et lacinia lorem pharetra fringilla. 
-            </div>
-            <div id = "Newsletter-buttons">
-                <div id = "Newsletter-left">
-                    <table>
-                        <tr> 
-                            <td class = "card">
-                                <a href = "https://www.google.com">
-                                    <div class="flip-card">
-                                        <div class="flip-card-inner">
-                                            <div class="flip-card-front">
-                                                <img src="image/newsletter1.jpeg" alt="May 2023" style="width:16.875vh;height:30vh;">
-                                            </div>
-                                        <div class="flip-card-back">
-                                            <h1>May 2023</h1>
-                                            <p style="font-size: small; font-weight: 300;">
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                            </p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </td>
-                            <td class = "card">
-                                <a href = "https://www.google.com">
-                                    <div class="flip-card">
-                                        <div class="flip-card-inner">
-                                            <div class="flip-card-front">
-                                                <img src="image/newsletter1.jpeg" alt="June 2023" style="width:16.875vh;height:30vh;">
-                                            </div>
-                                        <div class="flip-card-back">
-                                            <h1>June 2023</h1>
-                                            <p style="font-size: small; font-weight: 300;">
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                            </p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </td>
-                            <td class = "card">
-                                <a href = "https://www.google.com">
-                                    <div class="flip-card">
-                                        <div class="flip-card-inner">
-                                            <div class="flip-card-front">
-                                                <img src="image/newsletter1.jpeg" alt="July 2023" style="width:16.875vh;height:30vh;">
-                                            </div>
-                                        <div class="flip-card-back">
-                                            <h1>July 2023</h1>
-                                            <p style="font-size: small; font-weight: 300;">
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                            </p>
-                                        </div>
-                                    </div>
-                                </a>
-                                </div>
-                            </td>
-                        </tr>
-                    </table>
                 </div>
+                <div id = "Newsletter-buttons">
+                    <div id = "Newsletter-left">
+                        <table>
+                            <tr> 
+                                <td class = "card">
+                                    <a href = "https://www.google.com">
+                                        <div class="flip-card">
+                                            <div class="flip-card-inner">
+                                                <div class="flip-card-front">
+                                                    <img src="image/newsletter1.jpeg" alt="May 2023" style="width:16.875vh;height:30vh;">
+                                                </div>
+                                            <div class="flip-card-back">
+                                                <h1>May 2023</h1>
+                                                <p style="font-size: small; font-weight: 300;">
+                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </td>
+                                <td class = "card">
+                                    <a href = "https://www.google.com">
+                                        <div class="flip-card">
+                                            <div class="flip-card-inner">
+                                                <div class="flip-card-front">
+                                                    <img src="image/newsletter1.jpeg" alt="June 2023" style="width:16.875vh;height:30vh;">
+                                                </div>
+                                            <div class="flip-card-back">
+                                                <h1>June 2023</h1>
+                                                <p style="font-size: small; font-weight: 300;">
+                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </td>
+                                <td class = "card">
+                                    <a href = "https://www.google.com">
+                                        <div class="flip-card">
+                                            <div class="flip-card-inner">
+                                                <div class="flip-card-front">
+                                                    <img src="image/newsletter1.jpeg" alt="July 2023" style="width:16.875vh;height:30vh;">
+                                                </div>
+                                            <div class="flip-card-back">
+                                                <h1>July 2023</h1>
+                                                <p style="font-size: small; font-weight: 300;">
+                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
                 <div id = "Newsletter-right">
                     <a href = "newsletter.html">
                         <button class="c-btn" >Read More</button>
