--- a/newsletter.html
+++ b/newsletter.html
@@ -14,7 +14,7 @@
 <body>
     <div class = "nav">
         <div class = "logo">
-            logo idhar
+            <img src = "https://media.licdn.com/dms/image/C4D0BAQEmRfOpHlHwrw/company-logo_200_200/0/1678087546979?e=1697673600&v=beta&t=Zpwfs6JAhD5JCfAFa81oSQnejXWoWbjW-LtCKQcIeBI" alt = "logo">     
         </div>
         <div class = "menu">
             <ul class = "menu-items">
@@ -29,51 +29,57 @@
             <!-- card -->
             <a href="https://www.youtube.com/watch?v=ImhfIv5NSqY&list=PLoGAOsRY6CXPP8OWXGqgQ2N6btgTo-L8A&index=21&t=22s" target="blank_" style="text-decoration: none">
             <div class="card">
+                <div class="cardbgs" style="background-image: url('C:\Users\sammy\Downloads\IMG-20230629-WA0001.jpg');"></div>
                     <div class="icon"><i class="material-icons md-36">looks_one</i></div>
                     <p class="title">Numero Uno</p>
                     <p class="text">Bitches?</p>
             </div></a>
-            <!-- end card -->     
+            <!-- end card -->
             <!-- card -->
             <a href="https://www.youtube.com/watch?v=ImhfIv5NSqY&list=PLoGAOsRY6CXPP8OWXGqgQ2N6btgTo-L8A&index=21&t=22s" target="blank_" style="text-decoration: none">
             <div class="card">
+                <div class="cardbgs" style="background-image: url('C:\Users\sammy\Downloads\IMG-20230629-WA0001.jpg');">
                     <div class="icon"><i class="material-icons md-36">looks_two</i></div>
-                    <p class="title">Numero Dos</p>
-                    <p class="text">No Bitches?</p>
-            </div></a>
-            <!-- end card -->     
+                    <p class="title">Numero Uno</p>
+                    <p class="text">Bitches?</p>
+            </div></div></a>
+            <!-- end card -->
             <!-- card -->
             <a href="https://www.youtube.com/watch?v=ImhfIv5NSqY&list=PLoGAOsRY6CXPP8OWXGqgQ2N6btgTo-L8A&index=21&t=22s" target="blank_" style="text-decoration: none">
             <div class="card">
+                <div class="cardbgs" style="background-image: url('C:\Users\sammy\Downloads\IMG-20230629-WA0001.jpg');"></div>
                     <div class="icon"><i class="material-icons md-36">looks_3</i></div>
-                    <p class="title">Numero Tres</p>
-                    <p class="text">Still no Bitches?</p>
+                    <p class="title">Numero Uno</p>
+                    <p class="text">Bitches?</p>
             </div></a>
-            <!-- end card -->     
+            <!-- end card -->
             <!-- card -->
             <a href="https://www.youtube.com/watch?v=ImhfIv5NSqY&list=PLoGAOsRY6CXPP8OWXGqgQ2N6btgTo-L8A&index=21&t=22s" target="blank_" style="text-decoration: none">
             <div class="card">
+                <div class="cardbgs" style="background-image: url('C:\Users\sammy\Downloads\IMG-20230629-WA0001.jpg');"></div>
                     <div class="icon"><i class="material-icons md-36">looks_4</i></div>
-                    <p class="title">Numero For</p>
-                    <p class="text">Damn Bitches.</p>
+                    <p class="title">Numero Uno</p>
+                    <p class="text">Bitches?</p>
             </div></a>
-            <!-- end card -->     
+            <!-- end card -->
             <!-- card -->
             <a href="https://www.youtube.com/watch?v=ImhfIv5NSqY&list=PLoGAOsRY6CXPP8OWXGqgQ2N6btgTo-L8A&index=21&t=22s" target="blank_" style="text-decoration: none">
             <div class="card">
+                <div class="cardbgs" style="background-image: url('C:\Users\sammy\Downloads\IMG-20230629-WA0001.jpg');"></div>
                     <div class="icon"><i class="material-icons md-36">looks_5</i></div>
-                    <p class="title">Numero fiv</p>
-                    <p class="text">Fuck Bitches.</p>
+                    <p class="title">Numero Uno</p>
+                    <p class="text">Bitches?</p>
             </div></a>
-            <!-- end card -->     
+            <!-- end card -->
             <!-- card -->
             <a href="https://www.youtube.com/watch?v=ImhfIv5NSqY&list=PLoGAOsRY6CXPP8OWXGqgQ2N6btgTo-L8A&index=21&t=22s" target="blank_" style="text-decoration: none">
             <div class="card">
+                <div class="cardbgs" style="background-image: url('C:\Users\sammy\Downloads\IMG-20230629-WA0001.jpg');"></div>
                     <div class="icon"><i class="material-icons md-36">looks_6</i></div>
-                    <p class="title">Numero sex</p>
-                    <p class="text">but no Bitches:(</p>
+                    <p class="title">Numero Uno</p>
+                    <p class="text">Bitches?</p>
             </div></a>
-            <!-- end card -->     
+            <!-- end card -->
         </div>
         </div>
 </body>
