--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </ul>
         </div>
     </div>
-    <div id = "Content">
+    <div class="partitions" id = "Content">
         <div id = "About">
             <div id = "About-bg">
                 <div id = "About-bg-video">
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </div>
-        <div id = "Blog">
+        <div class="partitions" id = "Blog">
             <div id = "Blog-content">
                 <div class = "titles">
                     Our Blog
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </div>
-        <div id = "Newsletter">
+        <div class="partitions" id = "Newsletter">
             <div id = "Newsletter-content">
                 <div class = "titles">
                     Our Newsletter
@@ -173,10 +173,10 @@
                 </div>
             </div>
         </div>
-        <div id = "Partners">
+        <div class="partitions" id = "Partners">
 
         </div>
-        <div id = "Contact">
+        <div class="partitions" id = "Contact">
 
         </div>
     </div>
