--- a/blogs.html
+++ b/blogs.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/homeelements.css">
     <link rel="stylesheet" href="css/blog.css">
     <link rel="icon" type="image/x-icon" href="https://media.licdn.com/dms/image/C4D0BAQEmRfOpHlHwrw/company-logo_200_200/0/1678087546979?e=1697673600&v=beta&t=Zpwfs6JAhD5JCfAFa81oSQnejXWoWbjW-LtCKQcIeBI">
-    <link rel="stylesheet" href="css/cardstyles.css">
     <script src="js/index.js"></script>
 </head>
 <body>
@@ -25,7 +24,12 @@
         </div>
     </div>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <div class="content"> 
+    <div id="Blog-home"> 
+        <h1>Our Blogs</h1> 
+        <div class = "Blog-title">
+            Political and industrial impact of Boku no Pico on the modern age
         </div>
+
+    </div>
 </body>
 </html>
