--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Indian Vidyarthi</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/homeelements.css">
     <link rel="stylesheet" href="css/blog.css">
@@ -13,7 +13,7 @@
 <body>
     <div class = "nav">
         <div class = "logo">
-            logo idhar
+            <img src="image\logo.png">
         </div>
         <div class = "menu">
             <ul class = "menu-items">
