blog page basic

--- a/blogs.html
+++ b/blogs.html
@@ -24,24 +24,25 @@
         </div>
     </div>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <div class="content">
-        <div id = "Blog1">
-            <div id = "Blog1-left">
-                <div class = "Blog1-title">
-                    Yeh pehla blog hai
-                </div>
-                <div class = "subtitles">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Sed ultrices felis nisi, et lacinia lorem pharetra fringilla.
-                    Aenean imperdiet consectetur nunc, sed ornare orci aliquet id.
-                    Curabitur eget cursus diam. Vestibulum posuere libero sapien, ac sagittis mi tempus quis.
-                    Nunc ullamcorper eleifend justo ultricies iaculis.
-                </div>
-            </div>
-            <div id = "Blog1-right">
-                <img src = "image/newsletter1.jpeg" alt = "first blog">
-            </div> 
+    <div class = "Blog">
+        <div class="Blog-heading">
+            <h1 class="heading">Our Blogs</h1>
         </div>
+        <div class = "Blog-left">
+            <div class = "Blog-title">
+                Yeh pehla blog hai
+            </div>
+            <div class = "Blog-subtitles">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Sed ultrices felis nisi, et lacinia lorem pharetra fringilla.
+                Aenean imperdiet consectetur nunc, sed ornare orci aliquet id.
+                Curabitur eget cursus diam. Vestibulum posuere libero sapien, ac sagittis mi tempus quis.
+                Nunc ullamcorper eleifend justo ultricies iaculis.
+            </div>
+        </div>
+        <div class = "Blog-right">
+            <img src = "image/newsletter1.jpeg" alt = "first blog">
+        </div> 
     </div>
 </body>
 </html>
