--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <li class = "menu-item">
                     <a  href = "">Aspirants Network</a>
                 </li>
+                <li class="menu-item">
+                    <a href = "blogs.html">Our Blog</a>
+                </li>
                 <li class = "menu-item">
                     <a href = "#Partners">Our Partners</a>
                 </li>
