--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/homeelements.css">
     <link rel="stylesheet" href="css/blog.css">
-    <script src="js/index.js"></script>
+    <script src="js/index.js" defer></script>
 </head>
 <body>
-    <div class = "nav">
+    <div class = "nav" id="nav">
         <div class = "logo">
             logo idhar
         </div>
-        <div class = "menu">
+        <div class="hamburger" id="hamburger">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+        <div class = "menu" id="menu">
             <ul class = "menu-items">
                 <li class = "menu-item">
                     <a href = "#About">About Us</a>
@@ -35,7 +40,9 @@
                     <a  href = "#Contact">Contact Us</a>
                 </li>
             </ul>
+
         </div>
+
     </div>
     <div class="partitions" id = "Content">
         <div id = "About">
