blog page almost complete

--- a/blogs.html
+++ b/blogs.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/blog.css">
     <link rel="icon" type="image/x-icon" href="https://media.licdn.com/dms/image/C4D0BAQEmRfOpHlHwrw/company-logo_200_200/0/1678087546979?e=1697673600&v=beta&t=Zpwfs6JAhD5JCfAFa81oSQnejXWoWbjW-LtCKQcIeBI">
     <script src="js/index.js"></script>
+    <script src="js/blog.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
 </head>
 <body>
     <div class = "nav">
@@ -33,16 +35,16 @@
                 Yeh pehla blog hai
             </div>
             <div class = "Blog-subtitles">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Sed ultrices felis nisi, et lacinia lorem pharetra fringilla.
-                Aenean imperdiet consectetur nunc, sed ornare orci aliquet id.
-                Curabitur eget cursus diam. Vestibulum posuere libero sapien, ac sagittis mi tempus quis.
-                Nunc ullamcorper eleifend justo ultricies iaculis.
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots">...</span>
+                    <span id="more">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span>
+                </p>
+                <button onclick="myFunction()" id="myBtn">Read more</button>
             </div>
         </div>
         <div class = "Blog-right">
-            <img src = "image/newsletter1.jpeg" alt = "first blog">
+            <img src = "image/newsletter1.jpeg" alt = "first blog" id="img1">
         </div> 
     </div>
+    
 </body>
 </html>
