--- a/blogs.html
+++ b/blogs.html
@@ -15,7 +15,7 @@
 <body>
     <div class = "nav">
         <div class = "logo">
-            logo idhar
+            <img src = "https://media.licdn.com/dms/image/C4D0BAQEmRfOpHlHwrw/company-logo_200_200/0/1678087546979?e=1697673600&v=beta&t=Zpwfs6JAhD5JCfAFa81oSQnejXWoWbjW-LtCKQcIeBI" alt = "logo">
         </div>
         <div class = "menu">
             <ul class = "menu-items">
@@ -26,7 +26,7 @@
         </div>
     </div>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <div class = "Blog">
+    <div class = "Blog-top">
         <div class="Blog-heading">
             <h1 class="heading">Our Blogs</h1>
         </div>
@@ -35,16 +35,47 @@
                 Yeh pehla blog hai
             </div>
             <div class = "Blog-subtitles">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots">...</span>
-                    <span id="more">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots1">...</span>
+                    <span id="more1">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span>
                 </p>
-                <button onclick="myFunction()" id="myBtn">Read more</button>
+                <button onclick="myFunction1()" class="btn" id="myBtn1">Read more</button>
             </div>
         </div>
         <div class = "Blog-right">
             <img src = "image/newsletter1.jpeg" alt = "first blog" id="img1">
         </div> 
     </div>
-    
+    <div class = "Blog">
+        <div class = "Blog-left">
+            <div class = "Blog-title">
+                Yeh doosra blog hai
+            </div>
+            <div class = "Blog-subtitles">
+                <p><span id="dots2"></span>
+                    <span id="more2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span>
+                </p>
+                <button onclick="myFunction2()" class="btn" id="myBtn2">Read more</button>
+            </div>
+        </div>
+        <div class = "Blog-right">
+            <img src = "image/newsletter1.jpeg" alt = "first blog" id="img2">
+        </div> 
+    </div>
+    <div class = "Blog">
+        <div class = "Blog-left">
+            <div class = "Blog-title">
+                Yeh teesra blog hai
+            </div>
+            <div class = "Blog-subtitles">
+                <p><span id="dots3"></span>
+                    <span id="more3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span>
+                </p>
+                <button onclick="myFunction3()" class="btn" id="myBtn3">Read more</button>
+            </div>
+        </div>
+        <div class = "Blog-right">
+            <img src = "image/newsletter1.jpeg" alt = "first blog" id="img3">
+        </div> 
+    </div>
 </body>
 </html>
