--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class = "nav">
         <div class = "logo">
-            <img src="image\logo.png">
+            <img src = "https://media.licdn.com/dms/image/C4D0BAQEmRfOpHlHwrw/company-logo_200_200/0/1678087546979?e=1697673600&v=beta&t=Zpwfs6JAhD5JCfAFa81oSQnejXWoWbjW-LtCKQcIeBI" alt = "logo">
         </div>
         <div class = "menu">
             <ul class = "menu-items">
