error in last commit fixed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/homeelements.css">
 
-    <script src="js/index.js defer"></script>
+    <script src="js/index.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
     <link rel="icon" type="image/png" href="image/logo.png">
 
